Fix footer on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,6 @@ ol.namespaces li {
   margin: 0;
   margin-right: 0.5em;
 }
-footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  line-height: 4em;
-  background-color: #f5f5f5;
-}
 
 /* Suggestions */
 
